# nexus-research

./: .env.example  .gitignore  AGENTS.md  DEDUPLICATION_UPGRADE.md  DSL.md  EVALUATION.md  EXECUTION_PIPELINE.md  EXPORT_IMPROVEMENT_PLAN.md  GEMINI.md  PROVIDER_RESEARCH.md  README.md  ROADMAP.md  SCOPUS_WOS_RESEARCH.md  SEARCH_COMPLIANCE_PLAN.md  SEARCH_IMPROVEMENT_PLAN.md  full_text_extraction_schema.yaml  generate_prompts.py  identify_missing_pdfs.py  live_test.py  logs.txt  merge_results.py  nexus.yml  pyproject.toml  queries.yml  recover_pests.py  refined_queries.yml  verify_downloads.py
docs/: LLM_FULL_TEXT_EXTRACTION_PLAN.md
docs/source/: conf.py  index.rst  modules.rst  nexus.cli.rst  nexus.core.rst  nexus.dedup.rst  nexus.export.rst  nexus.extraction.rst  nexus.normalization.rst  nexus.providers.rst  nexus.rst  nexus.utils.rst
scripts/temp/: full_text_stats.py
src/nexus/analysis/: engine.py  journal_ranker.py  models.py  synthesis.py  visualize.py
src/nexus/cli/: README.md  __init__.py  analyze.py  deduplicate.py  export.py  extract.py  fetch.py  formatting.py  full_text_extract.py  init.py  login.py  main.py  rank.py  screen.py  search.py  synthesize.py  utils.py  validate.py  visualize.py
src/nexus/core/: __init__.py  config.py  models.py
src/nexus/dedup/: __init__.py  deduplicator.py  strategies.py
src/nexus/export/: __init__.py  base.py  bibtex_exporter.py  csv_exporter.py  jsonl_exporter.py  ris_exporter.py
tests/: test_export.py
tests/test_search/: test_dsl.py  test_normalization.py  test_parallel.py  test_providers.py  test_resume.py
(+42 files in other folders)
